2008-07-17  Vadim Kurland  <vadim@vk.crocodile.org>

	* ObjectManipulator.cpp (ObjectManipulator::delObj): fixed bug (no
	#): GUI crashed when user deleted one of the rule set objects of
	a firewall.

	* many dialogs: adjusted shape and size of many dialogs that used
	to be too big.

	* utils.cpp (getAddrByName): getAddrByName() works on all
	platforms and gets ipv4 and ipv6 addresses as requested. It looks
	like for it to work on Windows Vista machine needs to be
	configured with routable ipv6 addresses. When machine only had
	Link-local address on fe80:: net, even when ipv6 was enabled,
	getaddrinfo sent proper dns request for AAAA record, got reply but
	did not pass it back to the application. Once machine was
	configured with routable ipv6 address, getaddrinfo started working
	as expected. This problem was not observed on Linux and Mac OS X.

	* IPv6Dialog.cpp (IPv6Dialog::DNSlookup): Added "DNS Looup" button
	to the IPv6 object dialog.

	* dns.cpp (list): (libfwbuilder) Using getaddrinfo on all OS to
	perform dns lookup for different address families (AF_INET or
	AF_INET6).
	
	* utils.cpp (getAddrByName): using DNS::getHostByName instead of
	QT functions to perform host name lookup. This should allow us to
	do it for both AF_INET and AF_INET6 address families. Needs more
	testing.

2008-07-16  Vadim Kurland  <vadim@vk.crocodile.org>

	* ipt.cpp (dumpScript): Fixed bug (no #) that triggered when
	iptables script was geenrated with option that uses
	iptables-restore for activation. If ipv6 policy was empty,
	compiler added "( ) | ip6tables-restore" anyway which caused
	syntax errors.


	* RuleSetView.cpp (RuleSetView::addToGroupAbove): Additional check
	for a bug where adding very long list of rules to a rule group
	caused crash once. Bug is hard to reproduce.

2008-07-15  vadim  <vadim@vk.crocodile.org>

	* testing and bug fixes with QT 4.4.

	* Testing on Mac OS X and Windows Vista.

2008-07-08  vadim  <vadim@vk.crocodile.org>

