@@ -161,6 +161,11 @@
         <ICMPService id="icmp-Time_exceeded_in_transit" name="time exceeded in transit" code="1" type="11"/>
         <ICMP6Service id="ipv6-icmp-ping_request" name="ipv6 ping request" comment="IPv6 ping request" code="0" type="128"/>
         <ICMP6Service id="ipv6-icmp-ping_reply" name="ipv6 ping reply" comment="IPv6 ping reply" code="0" type="129"/>
+        <ICMP6Service id="ipv6-icmp-routersol" name="ipv6 routersol" comment="IPv6 router solicitation" code="0" type="133"/>
+        <ICMP6Service id="ipv6-icmp-routeradv" name="ipv6 routeradv" comment="IPv6 router advertisement" code="0" type="134"/>
+        <ICMP6Service id="ipv6-icmp-neighbrsol" name="ipv6 neighbrsol" comment="IPv6 neighbor solicitation" code="0" type="135"/>
+        <ICMP6Service id="ipv6-icmp-neighbradv" name="ipv6 neighbradv" comment="IPv6 neighbor advertisement" code="0" type="136"/>
+        <ICMP6Service id="ipv6-icmp-redir" name="ipv6 redir" comment="IPv6 redirect: shorter route exists" code="0" type="137"/>
         <ICMP6Service id="idCFE27650" name="ipv6 time exceeded" comment="Time exceeded in transit" code="0" type="3"/>
         <ICMP6Service id="idCFF27650" name="ipv6 time exceeded in reassembly" comment="Time exceeded in reassembly" code="1" type="3"/>
         <ICMP6Service id="idE0B27650" name="ipv6 packet too big" code="-1" type="2"/>
